Fix TimeShift
Fix TimeShift

--- a/src/styles/TimeShift.module.scss
+++ b/src/styles/TimeShift.module.scss
@@ -13,7 +13,6 @@
     align-items: center;
     gap: 0.75rem;
     margin-bottom: 10px;
-    width: 300px;
     min-width: 300px;
   }
 
